Update workflow and dockerfile